* Implemented {bl,ei,iu}redirect (lists links through redirects as well)
* (bug 13154) Introduced subpages flag to meta=siteinfo&siprop=namespaces
* (bug 13157) Added ucuserprefix parameter to list=usercontibs
* (bug 12394) Added rctitles parameter to list=recentchanges, making rcid retrieval easier
* (bug 13218) Fix inclusion of " character in hyperlinks

=== Languages updated in 1.13 ===

* Afrikaans (af)
* Gheg Albanian (aln)
* Amharic (am)
* Aragonese (an)
* Arabic (ar)
* Asturian (ast)
* Kotava (avk)
* Samogitian (bat-smg)
* Bulgarian (bg)
* Catalan (ca)
* Crimean Turkish (Cyrillic) (crh-cyrl)
* Crimean Turkish (Latin) (crh-latn)
* Czech (cs)
* Welsh (cy)
* Danish (da)
* Lower Sorbian (dsb)
* Greek (el)
* Esperanto (eo)
* Spanish (es)
* Estonian (et)
* Extremaduran (ext)
* Finnish (fi)
* Faroese (fo)
* French (fr)
* Franco-Provençal (frp)
* Friulian (fur)
* Irish (ga)
* Gan (gan)
* Galician (gl)
* Croatian (hr)
* Upper Sorbian (hsb)
* Hungarian (hu)
* Indonesian (id)
* Eastern Canadian (Unified Canadian Aboriginal Syllabics) (ike-cans)
* Icelandic (is)
* Italian (it)
* Japanese (ja)
* Georgian (ka)
* Kalaallisut (kl)
* Khmer (km)
* Latin (la)
* Luxembourgish (lb)
* Limburgish (li)
* Lao (lo)
* Lithuanian (lt)
* Malayalam (ml)
* Moldavian (mo)
* Marathi (mr)
* Low German (nds)
* Dutch (nl)
* Norwegian Nynorsk (nn)
* Norwegian (bokmål)‬ (no)
* Polish (pl)
* Pashto (ps)
* Portuguese (pt)
* Russian (ru)
* Yakut (sah)
* Sassaresu (sdc)
* Slovak (sk)
* Somali (so)
* Albanian (sq)
* Sranan Tongo (srn)
* Seeltersk (stq)
* Swedish (sv)
* Tamil (ta)
* Telugu (te)
* Tajik (tg)
* Thai (th)
* Turkish (tr)
* Tuvinian (tyv)
* Venda (ve)
* Vietnamese (vi)
* Volapük (vo)
* Wolof (wo)
* Mingrelian (xmf)
* Yiddish (yi)

== Compatibility ==

MediaWiki 1.13 requires PHP 5 (5.1 recommended). PHP 4 is no longer supported.

PHP 5.0.x fails on 64-bit systems due to serious bugs with array processing:
http://bugs.php.net/bug.php?id=34879
Upgrade affected systems to PHP 5.1 or higher.
